# nsgod

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: main.workflow
src/: nsctl.cpp  nsgod.cpp  process.cpp  process.h  utils.hpp
